src/test/compile-fail/does-nothing.rs
// xfail-stage0
// xfail-stage1
// xfail-stage2
// error-pattern: does nothing
fn main() {
  log "doing";
  this_does_nothing_what_the;
  log "boing";
}

